--- a/KWIC.cabal
+++ b/KWIC.cabal
@@ -24,6 +24,8 @@ source-repository head
   location: https://github.com/githubuser/KWIC
 
 library
+  exposed-modules:
+      KWIC
   other-modules:
       Paths_KWIC
   autogen-modules:
@@ -32,8 +34,9 @@ library
       src
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
   build-depends:
-      base >=4.7 && <5
+      base
     , containers
+    , hspec
     , mtl
   default-language: Haskell2010
 
@@ -48,8 +51,9 @@ executable KWIC-exe
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       KWIC
-    , base >=4.7 && <5
+    , base
     , containers
+    , hspec
     , mtl
   default-language: Haskell2010
 
@@ -57,6 +61,8 @@ test-suite KWIC-test
   type: exitcode-stdio-1.0
   main-is: Spec.hs
   other-modules:
+      CoreSpec
+      IntegrationSpec
       Paths_KWIC
   autogen-modules:
       Paths_KWIC
@@ -65,7 +71,8 @@ test-suite KWIC-test
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       KWIC
-    , base >=4.7 && <5
+    , base
     , containers
+    , hspec
     , mtl
   default-language: Haskell2010
