Integrate frontend with backend

--- a/package.yaml
+++ b/package.yaml
@@ -1,29 +1,40 @@
 name:                KWIC
 version:             0.1.0.0
-github:              "githubuser/KWIC"
+github:              "LayrNeto/key-word-in-context"
 license:             BSD-3-Clause
-author:              "Author name here"
-maintainer:          "example@example.com"
-copyright:           "2024 Author name here"
+author:              "Layr de Andrade Neto"
+maintainer:          "netolayr@gmail.com"
+copyright:           "2025 Layr de Andrade Neto"
 
 extra-source-files:
 - README.md
 - CHANGELOG.md
+- data/stop_words.txt
+- static/index.html
+- static/reset.css
+- static/style.css
 
 # Metadata used when publishing your package
-# synopsis:            Short description of your package
-# category:            Web
 
 # To avoid duplicated efforts in documentation and dealing with the
 # complications of embedding Haddock markup inside cabal files, it is
 # common to point users to the README.md file.
-description:         Please see the README on GitHub at <https://github.com/githubuser/KWIC#readme>
+
+synopsis:            A web-based KWIC application written in Haskell.
+category:            Web
+
+description:         A Haskell implementation of Key Word in Context (KWIC) with a web interface.
 
 dependencies:
 - base >= 4.7 && < 5
 - hspec
 - containers
 - mtl
+- scotty
+- text
+- wai-extra
+- wai-middleware-static
+- aeson
 
 ghc-options:
 - -Wall
@@ -46,7 +57,7 @@ library:
     - mtl
 
 executables:
-  KWIC-exe:
+  KWIC-web:
     main:                Main.hs
     source-dirs:         app
     ghc-options:
