--- a/KWIC.cabal
+++ b/KWIC.cabal
@@ -6,22 +6,28 @@ cabal-version: 2.2
 
 name:           KWIC
 version:        0.1.0.0
-description:    Please see the README on GitHub at <https://github.com/githubuser/KWIC#readme>
-homepage:       https://github.com/githubuser/KWIC#readme
-bug-reports:    https://github.com/githubuser/KWIC/issues
-author:         Author name here
-maintainer:     example@example.com
-copyright:      2024 Author name here
+synopsis:       A web-based KWIC application written in Haskell.
+description:    A Haskell implementation of Key Word in Context (KWIC) with a web interface.
+category:       Web
+homepage:       https://github.com/LayrNeto/key-word-in-context#readme
+bug-reports:    https://github.com/LayrNeto/key-word-in-context/issues
+author:         Layr de Andrade Neto
+maintainer:     netolayr@gmail.com
+copyright:      2025 Layr de Andrade Neto
 license:        BSD-3-Clause
 license-file:   LICENSE
 build-type:     Simple
 extra-source-files:
     README.md
     CHANGELOG.md
+    data/stop_words.txt
+    static/index.html
+    static/reset.css
+    static/style.css
 
 source-repository head
   type: git
-  location: https://github.com/githubuser/KWIC
+  location: https://github.com/LayrNeto/key-word-in-context
 
 library
   exposed-modules:
@@ -34,13 +40,18 @@ library
       src
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
   build-depends:
-      base
+      aeson
+    , base
     , containers
     , hspec
     , mtl
+    , scotty
+    , text
+    , wai-extra
+    , wai-middleware-static
   default-language: Haskell2010
 
-executable KWIC-exe
+executable KWIC-web
   main-is: Main.hs
   other-modules:
       Paths_KWIC
@@ -51,10 +62,15 @@ executable KWIC-exe
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       KWIC
+    , aeson
     , base
     , containers
     , hspec
     , mtl
+    , scotty
+    , text
+    , wai-extra
+    , wai-middleware-static
   default-language: Haskell2010
 
 test-suite KWIC-test
@@ -71,8 +87,13 @@ test-suite KWIC-test
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       KWIC
+    , aeson
     , base
     , containers
     , hspec
     , mtl
+    , scotty
+    , text
+    , wai-extra
+    , wai-middleware-static
   default-language: Haskell2010
