Change input type to file and add custom stop words functionality
- Replaced text input with file input for processing phrases
- Added functionality to upload and use custom stop words file

--- a/KWIC.cabal
+++ b/KWIC.cabal
@@ -42,8 +42,11 @@ library
   build-depends:
       aeson
     , base
+    , bytestring
     , containers
+    , directory
     , hspec
+    , http-types
     , mtl
     , scotty
     , text
@@ -64,8 +67,11 @@ executable KWIC-web
       KWIC
     , aeson
     , base
+    , bytestring
     , containers
+    , directory
     , hspec
+    , http-types
     , mtl
     , scotty
     , text
@@ -89,8 +95,11 @@ test-suite KWIC-test
       KWIC
     , aeson
     , base
+    , bytestring
     , containers
+    , directory
     , hspec
+    , http-types
     , mtl
     , scotty
     , text
